k8s/simulator/02-simulator-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simulator-srv
  namespace: workshop-simulator
spec:
  type: ClusterIP # 🔒 Oculto de la red externa, solo accesible por el Ingress
  selector:
    app: simulator-app
  ports:
    - port: 8080
      targetPort: 8080
